fix: increase gap between sign and welcome on mobile to 90px (#16)

--- a/www/css/content.css
+++ b/www/css/content.css
@@ -1640,7 +1640,7 @@
 
 	#hero-caption .inner img {
 		margin-top: -20px;
-		margin-bottom: 60px;
+		margin-bottom: 90px;
 	}
 
 	.next-hero-title::before {
